@@ -3,6 +3,7 @@
 
 * Fixed a bug where unbounded arrays would get emitted to the metadata as having bounds of "[None]" instead of "[]". (#41)
 * Fixed structs not having associated line numbers in the JSON output (#39)
+* Added --imgui-include-dir option to allow the path to ImGui include files to be specified
 
 --- v0.06
 
